Bugless version with turning, schema, and priotity

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 2d array filled with -1 values\n",
     "grid = np.full((10,10), -1)\n",
     "lane = grid[::-1, 3]\n",
@@ -47,8 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
     "grid = np.full((10,10), -1)\n",
     "for i in range(10):\n",
     "    grid[i, 3] = 0\n",
@@ -251,112 +259,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9, 3)\n",
-      "(8, 3)\n",
-      "2\n",
-      "[[-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  0 -1 -1 -1 -1 -1 -1]\n",
-      " [-1 -1 -1  2 -1 -1 -1 -1 -1 -1]]\n"
+      "140288713701408\n",
+      "140288713701408\n",
+      "140288713701408\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
-    "import numpy as np\n",
+    "class Lane:\n",
+    "    def __init__(self):\n",
+    "        self.cars = []\n",
     "\n",
     "class Car:\n",
-    "    def __init__(self, lane, position, max_speed=3):\n",
-    "        self.lane = lane\n",
-    "        self.position = position\n",
-    "        self.max_speed = max_speed\n",
-    "        self.speed = 1\n",
-    "        global grid\n",
-    "        grid[self.grid_pos] = 2\n",
+    "    def __init__(self, speed):\n",
+    "        self.speed = speed\n",
     "\n",
-    "    def move(self):\n",
-    "        self.position += self.speed\n",
-    "        self.lane.next_road[self.position] = 2\n",
+    "car = Car(5)  # create a Car object\n",
+    "lane = Lane()  # create a Lane object\n",
+    "lane.cars.append(car)  # add the Car object to the Lane object\n",
+    "d = {'car': car}  # put it in a dictionary\n",
     "\n",
-    "    @property\n",
-    "    def grid_pos(self):\n",
-    "        return self.lane.coordinates(self.position)\n",
+    "car.speed = 10  # modify the Car object\n",
     "\n",
-    "class Lane:\n",
-    "    def __init__(self, subarray, pos, direction, entry_rate=0.1):\n",
-    "        self.length = len(subarray)\n",
-    "        self.road = subarray\n",
-    "        self.next_road = np.zeros_like(subarray)\n",
-    "        self.entry_rate = entry_rate\n",
-    "        self.cars = []\n",
-    "        self.traffic_lights = []\n",
-    "        self.position = pos\n",
-    "        self.direction = direction\n",
+    "print(id(d['car']))  # outputs: 10\n",
     "\n",
-    "    def setup(self):\n",
-    "        global grid\n",
-    "        if self. direction in ['N', 'S']:\n",
-    "            grid[:, self.position] = 0\n",
-    "        elif self.direction in ['E', 'W']:\n",
-    "            grid[self.position, :] = 0        \n",
+    "d['car'].speed = 20  # modify the Car object again\n",
     "\n",
-    "    def update(self):\n",
-    "        for car in self.cars:\n",
-    "            car.move()\n",
-    "            print(car.position)\n",
+    "print(id(car))  # outputs: 20\n",
     "\n",
-    "        if random.random() < self.entry_rate and self.next_road[0] == 0:\n",
-    "            self.add_car()\n",
-    "        \n",
-    "        self.road = self.next_road.copy()\n",
-    "        self.next_road = np.zeros_like(self.road)\n",
+    "lane.cars[0].speed = 30  # modify the Car object again\n",
     "\n",
-    "    def add_car(self):\n",
-    "        self.cars.append(Car(self, 0))\n",
-    "        self.next_road[0] = 2\n",
-    "\n",
-    "    def coordinates(self, position):\n",
-    "        if self.direction == 'N':\n",
-    "            return self.length - position -1, self.position\n",
-    "        elif self.direction == 'S':\n",
-    "            return self.position, position\n",
-    "        elif self.direction == 'E':\n",
-    "            return position, self.position\n",
-    "        elif self.direction == 'W':\n",
-    "            return position, self.length - self.position - 1\n",
-    "\n",
-    "\n",
-    "\n",
-    "grid = np.full((10,10), -1)\n",
-    "\n",
-    "lane = Lane(grid[len(grid)-1::-1, 3], 3, 'N')\n",
-    "\n",
-    "lane.setup()\n",
-    "\n",
-    "lane.add_car()\n",
-    "\n",
-    "print(lane.cars[0].grid_pos)\n",
-    "\n",
-    "lane.cars[0].move()\n",
-    "\n",
-    "print(lane.cars[0].grid_pos)\n",
-    "\n",
-    "lane.update()\n",
-    "\n",
-    "print(grid)"
+    "print(id(car))  # outputs: 30\n"
    ]
   },
   {
